style-platform.css
/* ... */
/* Centered w Icons */

.banner_icons h1 {
	font-size:38px;	
}

.banner_icons.carousel-caption img.icons {
	margin-bottom:10px;
	max-height:125px;
}

.banner_icons .col-md-4 p {
	font-size:1.6em;	
}
.banner_icons.carousel-caption {
	left:5%;
	right:5%;
	bottom:0px;
}
@media (max-width:1199px) {
.banner_icons.carousel-caption {
	bottom:-5px;

}
.banner_icons.carousel-caption img.icons {
	max-height:90px;
}

.banner_icons h1 {
	font-size:28px;	
}

.banner_icons .col-md-4 p {
	font-size:1.3em;	
}
}


.carousel-indicators {
	width:auto;	
	margin-left:-5px;
	padding-left:0px;
	text-align:left;
	margin-bottom:3px;
	position:inherit;
}

.carousel-indicators, #carouselButtons {
	bottom:15px;	
}


.carousel-indicators li {
	background-color:#666;
	border-color:#CCC;
	border-radius:10px !important;
	border:none;
}


.carousel-indicators li.active {
	background-color:#3276b1;	
}

#carouselButtons {
	padding-right:0px;
}

#carouselButtons .play #pauseButton {
	display:none;
}

#carouselButtons .pause #playButton {
	display:none;	
}


/* Scrolling Retailers */

.bx-wrapper {
	margin-bottom:30px;	
}

.bx-wrapper .bx-pager.bx-default-pager a {
	border-radius:5px !important;	
}

/* Vertical Center Images */

a.offer-imageLink {
	height:100px;
	width:120px;
	display:table-cell;
	vertical-align:middle;	
	margin:0px auto;
}

/* Top Retailers */

#top_retailers .panel-body {
	padding-bottom:25px;	
}

#top_retailers .col-md-3 {
	xheight:200px;	
}

#top_retailers a img {
	max-width:100px;
	max-height:100px;	
}
#top_retailers .center {
    display: table;
    width: 100%;
    height: 100px; /* for demo only */
}
#top_retailers .center .v-align {
    display: table-cell;
    text-align: center;
    vertical-align: middle;
}

/* Zip Field */

li.zip_field {
	margin-bottom:-8px !important;	
}

li.zip_field .input-group {
	xmargin-top:25px;	
}

#merchant_search ul li {
	xmargin-bottom:0px;	
}

li.zip_field {
	width:30%;
}

@media (max-width:768px) {
	li.zip_field { margin-bottom:-20px !important; width:60%;}	
}

@media (max-width:502px) {
	li.zip_field { margin-top:10px; width:100%;}
}

/* Product Images */

img.product {
	max-height:200px;
	max-width:200px;	
}

/* How it Works */
@media (max-width:768px) {
#hiw-images .block-display-txt {
	text-align:center;	
}
}

/* All Retailer */
	
.alpha_paging {
	
}

.alpha_paging div {
	background:#F5F5F5;
	margin:20px 0px;
	
}

.alpha_paging div.mobile_paging {
	height:65px;
	padding:10px 15px;	
}


.alpha_paging div.mobile_paging h2 {
	margin-top:5px;	
}

.alpha_paging h2 {
	font-size:1.2em;	
}

.alpha_paging ul, .alpha_paging h2 {
	padding:10px 5px;
	margin:0px;	
	line-height:1;
}

.alpha_paging ul li {
	list-style:none;
	display:inline;	
	font-size:1.2em;
}

.alpha_paging ul li a.active {
	color:#333;	
}

.alpha_paging ul li a.top {
	margin-left:10px;	
}

ul.retailers_list {
	padding-left:5px;	
}

ul.retailers_list li {
	list-style:none;
	xline-height:2;	
}

ul.retailers_list li span {
	margin-bottom:5px;
}	

ul.retailers_list li a, ul.retailers_list li span {
	float:left;
	clear:both;
	word-wrap:break-word;
}

/* Offer Table */

#merchant-toggle {
	margin-bottom:25px;	
}

#merchant_search label {
	font-weight:normal;	
}

#merchant_search ul li {
	margin-bottom:15px;	
}

#merchant_search .selectboxit-container {
	margin-top:-10px;	
}

 #offer_table thead tr th {
	font-weight:bold;	 
 }

#offer_table tr td, #offer_table tr th  {
	padding:20px 5px;
	width:20%;	
}

 #offer_table tr th {
	font-weight:normal; 
 }
 
 #offer_table tr td.offer span {
	white-space:normal;	 
 }

#offer_table tr td:last-child span {
	display:block;	 
 }
  
#offer_pagination {
	xborder: #ddd solid 1px; 
	xbackground: #eee; 
	padding: 10px;
	text-align:center;	 
 }
 
 #offer_pagination a:hover {
	color:#2a6496; 
 }
 
#offer_pagination .glyphicon, #offer_pagination .glyphicon:hover {
	text-decoration:none;
	border:1px solid #006699;
	border-radius:18px !important;
	background-color:#006699;
	color:#FFF;
	padding:8px 9px 8px 10px;
}

#retailer_listing th {
	white-space:normal;	
}
 
input[type=radio].css-checkbox {
	display:none;
}

input[type=radio].css-checkbox + label.css-label {
	padding-left:29px;
	height:31px; 
	display:inline-block;
	line-height:26px;
	background-repeat:no-repeat;
	background-position: 0 0;
	font-size:24px;
	vertical-align:middle;
	cursor:pointer;

}

input[type=radio].css-checkbox:checked + label.css-label {
	background-position: 0 -24px;
	background-color:#428bca;
}
label.css-label {
	xbackground-image: url(../images/radio_bg.png);
	border-radius:15px !important;
	width:29px;
	border:2px solid #428bca;
	margin-right:120px;
	background-color:#FFF;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

label.css-label span.text {
	margin-left:10px;	
}

#offer_table img {
	max-width:100px;
	max-height:100px;	
}

/* Activate Offers */

button.activated {
	border-color:#3276b1;
	color:#3276b1;
}

/* Offer Details Arrows */

#offer_table tr td.currency p a span.glyphicon {
	display:inline-block;	 /* Toggle */
}

/*
 * jquery.selectBoxIt.css 3.8.1
 * Author: @gregfranko
 */

/*
  Common CSS Properties
  ---------------------
  These properties will be applied to any themes that you use
*/

/* SelectBoxIt container */
.selectboxit-container {
  position: relative;
  display: inline-block;
  vertical-align: middle;
}

/* Styles that apply to all SelectBoxIt elements */
.selectboxit-container * {
  /* Prevents text selection */
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: -moz-none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
  outline: none;
  white-space: nowrap;
}
/* ... */

